feat(toml): Read TOML setting file
Parse it to the typed object.

--- a/deno.json
+++ b/deno.json
@@ -1,3 +1,6 @@
 {
-  "tasks": { "gen": "deno run --allow-read --allow-write ./src/main.ts" }
+  "tasks": { "gen": "deno run --allow-read --allow-write ./src/main.ts" },
+  "imports": {
+    "toml": "https://deno.land/std@0.215.0/toml/mod.ts"
+  }
 }
