--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": { "gen": "deno run --allow-read --allow-write ./src/main.ts" },
   "imports": {
-    "toml": "https://deno.land/std@0.215.0/toml/mod.ts"
+    "toml": "https://deno.land/std@0.215.0/toml/mod.ts",
+    "xml": "https://deno.land/x/xml@2.1.3/mod.ts"
   }
 }
