--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,21 @@
 {
+  "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
+  "fmt": {
+    "exclude": ["LICENSE", ".github/**/*.md"]
+  },
+  "test": {
+    "include": ["src/", "test/"]
+  },
   "tasks": {
+    "clean": "deno fmt && deno cache --lock-write ./**/*.ts",
     "gen": "deno run --allow-read --allow-write ./src/main.ts",
     "test": "deno test --allow-read --allow-write"
   },
   "imports": {
+    "assert": "https://deno.land/std@0.215.0/assert/mod.ts",
+    "path": "https://deno.land/std@0.215.0/path/mod.ts",
     "toml": "https://deno.land/std@0.215.0/toml/mod.ts",
-    "xml": "https://deno.land/x/xml@2.1.3/mod.ts",
     "case": "https://deno.land/x/case@2.2.0/mod.ts",
-    "path": "https://deno.land/std@0.215.0/path/mod.ts"
+    "xml": "https://deno.land/x/xml@2.1.3/mod.ts"
   }
 }
