--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,10 @@
 {
   "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
   "fmt": {
-    "exclude": [
-      "LICENSE",
-      ".github/**/*.md"
-    ]
+    "exclude": ["LICENSE", ".github/**/*.md"]
   },
   "test": {
-    "include": [
-      "src/",
-      "test/"
-    ]
+    "include": ["src/", "test/"]
   },
   "tasks": {
     "clean": "deno fmt && deno cache --lock-write ./**/*.ts",
@@ -18,11 +12,10 @@
     "test": "deno test --allow-read --allow-write"
   },
   "imports": {
-    "assert": "https://deno.land/std@0.215.0/assert/mod.ts",
+    "assert": "https://deno.land/std@0.216.0/assert/mod.ts",
     "path": "https://deno.land/std@0.216.0/path/mod.ts",
     "toml": "https://deno.land/std@0.216.0/toml/mod.ts",
-    "path": "https://deno.land/std@0.215.0/path/mod.ts",
-    "toml": "https://deno.land/std@0.215.0/toml/mod.ts",
+    "parse_args": "https://deno.land/std@0.216.0/cli/parse_args.ts",
     "case": "https://deno.land/x/case@2.2.0/mod.ts",
     "xml": "https://deno.land/x/xml@2.1.3/mod.ts"
   }
