fix(ci): $GITHUB_OUTPUT doesn’t allow multi-line
By default, it treats there is no EOF at the end.

--- a/.github/workflows/gist-update.yml
+++ b/.github/workflows/gist-update.yml
@@ -28,7 +28,10 @@ jobs:
 
       - name: 🔍 Check the Result
         id: result
-        run: echo "changes=$(git -C 'outputs' status --porcelain)" >> "$GITHUB_OUTPUT"
+        run: |
+          echo 'changes<<EOM' >> "$GITHUB_OUTPUT"
+          git -C 'outputs' status --porcelain >> "$GITHUB_OUTPUT"
+          echo 'EOM' >> "$GITHUB_OUTPUT"
 
       - name: ⬆️ Upload OPML file
         if: ${{ steps.result.outputs.changes != '' }}
