chore(task): Rename `clean` to `lock`
Now `clean` only updates the lock file.

--- a/.github/workflows/deps-update.yml
+++ b/.github/workflows/deps-update.yml
@@ -26,7 +26,7 @@ jobs:
         id: deps
         run: |
           deno task update -w --summary=../title.txt --report=../body.md
-          deno task clean
+          deno task lock
 
       - name: 🔍 Check the Result
         id: result
