--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -23,5 +23,5 @@ jobs:
 
     steps:
       - name: 🚫 Base Branch is wrong
-        if: ${{ github.base_ref == 'main' && github.head_ref != 'dev' && !startsWith(github.base_ref, 'tagpr-from-') }}
-        run: echo "Base branch should be \`dev\`." && return 1
+        if: ${{ github.base_ref == 'main' && github.head_ref != 'dev' }}
+        run: echo "Base branch should be \`dev\`." && exit 1
