--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,10 @@ name: 🚀 Release
 on:
   push:
     branches:
-      - "dev"
+      - "main"
 
 permissions:
+  contents: write
   pull-requests: write
 
 jobs:
