--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,12 @@
+ci:
+  autofix_commit_msg: |
+    chore(fix): Auto fixes from pre-commit.com hooks
+
+    For more information, see https://pre-commit.ci.
+  autoupdate_branch: "dev"
+  autoupdate_commit_msg: |
+    chore(deps): Bump pre-commit hook
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
