ci(labeler): Add `Type: Dependencies` label to pre-commit.ci
When hooks are updated, automatically add that label.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -15,6 +15,6 @@
 "Type: CI":
   - head-branch: ["^ci-"]
 "Type: Dependencies":
-  - head-branch: ["^dep(endency|endencies|s)?-"]
+  - head-branch: ["^dep(endency|endencies|s)?-", "^pre-commit-ci-update-config$"]
 "Type: Meta":
   - head-branch: ["^meta-"]
