ci(molt): Update the lock file
Not only "deno.json" but also "deno.lock" will be updated.

--- a/.github/workflows/deps-update.yml
+++ b/.github/workflows/deps-update.yml
@@ -24,9 +24,7 @@ jobs:
 
       - name: ⬆️ Update Dependencies
         id: deps
-        run: |
-          deno task update -w --summary=../title.txt --report=../body.md
-          deno task lock
+        run: deno task update -w --unstable-lock --summary=../title.txt --report=../body.md
 
       - name: 🔍 Check the Result
         id: result
