ci(test): Run when "deno.lock" has changed
Because of deps updates, it might be broken.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,12 @@ on:
       - dev
     paths:
       - "**.ts"
+      - "./deno.lock"
       - ".github/workflows/test.yml"
   pull_request:
     paths:
       - "**.ts"
+      - "./deno.lock"
       - ".github/workflows/test.yml"
 
 jobs:
