ci(yaml): Quote text instead of using `|`
Even if the text contains `:`, YAML treats it as normal if quoted.

--- a/.github/workflows/deps-update.yml
+++ b/.github/workflows/deps-update.yml
@@ -67,6 +67,5 @@ jobs:
           branch: deps-deno
           delete-branch: true
           base: dev
-          title: |
-            chore(deps): ${{ steps.title.outputs.content }}
+          title: "chore(deps): ${{ steps.title.outputs.content }}"
           body: ${{ steps.body.outputs.content }}
