--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,7 @@ ci:
 
     For more information, see https://pre-commit.ci.
   autoupdate_branch: "dev"
-  autoupdate_commit_msg: |
-    chore(deps): Bump pre-commit hook
+  autoupdate_commit_msg: "chore(deps): Bump pre-commit hook"
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
