style(pr): Add emoji to each "Type of the Change"
Make it possible to choose the suitable choise immediately.

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -3,25 +3,25 @@ searchTitle: true
 searchBody: true
 
 customLabels:
-  - text: "- [x] Feature"
+  - text: "- [x] 🎉 Feature"
     label: "Type: Feature"
-  - text: "- [x] Bug"
+  - text: "- [x] 🧰 Bug"
     label: "Type: Bug"
-  - text: "- [x] Security"
+  - text: "- [x] 🛡️ Security"
     label: "Type: Security"
-  - text: "- [x] Documentation"
+  - text: "- [x] 📖 Documentation"
     label: "Type: Documentation"
-  - text: "- [x] Refactoring*"
+  - text: "- [x] 🧹 Refactoring"
     label: "Type: Refactoring"
-  - text: "- [x] Testing"
+  - text: "- [x] 🧪 Testing"
     label: "Type: Testing"
-  - text: "- [x] Maintenance"
+  - text: "- [x] 🔧 Maintenance"
     label: "Type: Maintenance"
-  - text: "- [x] CI"
+  - text: "- [x] 🎽 CI"
     label: "Type: CI"
-  - text: "- [x] Dependencies"
+  - text: "- [x] ⛓️ Dependencies"
     label: "Type: Dependencies"
   - text: "chore(deps): "
     label: "Type: Dependencies"
-  - text: "- [x] Meta"
+  - text: "- [x] 🧠 Meta"
     label: "Type: Meta"
