ci(deps): Run deps update on the dev branch
To prevent updating already updated deps.

--- a/.github/workflows/deps-update.yml
+++ b/.github/workflows/deps-update.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: dev
 
       - name: 🦕 Setup Deno
         uses: denoland/setup-deno@v1
