--- a/deno.json
+++ b/deno.json
@@ -8,11 +8,11 @@
     "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=deno.land https://deno.land/x/molt/cli.ts deno.json"
   },
   "imports": {
-    "assert": "https://deno.land/std@0.224.0/assert/mod.ts",
-    "path": "https://deno.land/std@0.224.0/path/mod.ts",
-    "toml": "https://deno.land/std@0.224.0/toml/mod.ts",
-    "parse_args": "https://deno.land/std@0.224.0/cli/parse_args.ts",
-    "case": "https://deno.land/x/case@2.2.0/mod.ts",
-    "xml": "https://deno.land/x/xml@4.0.0/mod.ts"
+    "@lowlighter/xml": "jsr:@lowlighter/xml@^4.0.1",
+    "@std/assert": "jsr:@std/assert@^0.225.1",
+    "@std/cli": "jsr:@std/cli@^0.224.1",
+    "@std/path": "jsr:@std/path@^0.224.0",
+    "@std/toml": "jsr:@std/toml@^0.224.0",
+    "@wok/case": "jsr:@wok/case@^1.0.1"
   }
 }
