--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,7 @@
   "test": { "include": ["src/", "test/"] },
   "tasks": {
     "gen": "deno run --allow-read --allow-write ./src/main.ts",
-    "test": "deno test --allow-read --allow-write",
-    "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=deno.land https://deno.land/x/molt/cli.ts deno.json"
+    "test": "deno test --allow-read --allow-write"
   },
   "imports": {
     "@lowlighter/xml": "jsr:@lowlighter/xml@^4.0.1",
