--- a/deno.json
+++ b/deno.json
@@ -4,14 +4,13 @@
   "test": { "include": ["src/", "test/"] },
   "tasks": {
     "gen": "deno run --allow-read --allow-write ./src/main.ts",
-    "test": "deno test --allow-read --allow-write",
-    "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=deno.land https://deno.land/x/molt/cli.ts deno.json"
+    "test": "deno test --allow-read --allow-write"
   },
   "imports": {
-    "@lowlighter/xml": "jsr:@lowlighter/xml@^4.0.1",
-    "@std/assert": "jsr:@std/assert@^0.225.1",
-    "@std/cli": "jsr:@std/cli@^0.224.1",
-    "@std/path": "jsr:@std/path@^0.224.0",
+    "@libs/xml": "jsr:@libs/xml@^5.0.2",
+    "@std/assert": "jsr:@std/assert@^0.225.2",
+    "@std/cli": "jsr:@std/cli@^0.224.2",
+    "@std/path": "jsr:@std/path@^0.225.1",
     "@std/toml": "jsr:@std/toml@^0.224.0",
     "@wok/case": "jsr:@wok/case@^1.0.1"
   }
