--- a/deno.json
+++ b/deno.json
@@ -7,11 +7,11 @@
     "test": "deno test --allow-read --allow-write"
   },
   "imports": {
-    "@libs/xml": "jsr:@libs/xml@^5.0.2",
-    "@std/assert": "jsr:@std/assert@^0.225.2",
-    "@std/cli": "jsr:@std/cli@^0.224.2",
-    "@std/path": "jsr:@std/path@^0.225.1",
-    "@std/toml": "jsr:@std/toml@^0.224.0",
-    "@wok/case": "jsr:@wok/case@^1.0.1"
+    "@libs/xml": "jsr:@libs/xml@5.0.2",
+    "@std/assert": "jsr:@std/assert@0.225.2",
+    "@std/cli": "jsr:@std/cli@0.224.2",
+    "@std/path": "jsr:@std/path@0.225.1",
+    "@std/toml": "jsr:@std/toml@0.224.0",
+    "@wok/case": "jsr:@wok/case@1.0.1"
   }
 }
