fix(ci): Remove `./`
GitHub Actions probably doesn't recognize the syntax.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,12 +7,12 @@ on:
       - dev
     paths:
       - "**.ts"
-      - "./deno.lock"
+      - "deno.lock"
       - ".github/workflows/test.yml"
   pull_request:
     paths:
       - "**.ts"
-      - "./deno.lock"
+      - "deno.lock"
       - ".github/workflows/test.yml"
 
 jobs:
