ci(workflows): Specify commit hash with version comment
Make it secure and safe from code falsification.

--- a/.github/workflows/gist-update.yml
+++ b/.github/workflows/gist-update.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: 🚚 Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
 
       - name: 🦕 Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@041b854f97b325bd60e53e9dc2de9cb9f9ac0cba # v1.1.4
         with:
           deno-version: v1.x
 
