refactor(sites): Prevent a breaking change
Get site URL if `xmlUrl` is not set.

--- a/.github/assets/example/feeds.toml
+++ b/.github/assets/example/feeds.toml
@@ -3,12 +3,10 @@ name = "list 1"
 
 [[lists.feeds]]
 title = "feed 1"
-type = "rss"
-rssUrl = "https://feed1.com/rss"
+xmlUrl = "https://feed1.com/rss"
 [[lists.feeds]]
 title = "feed 2"
-type = "rss"
-rssUrl = "https://feed2.com/rss"
+xmlUrl = "https://feed2.com/rss"
 
 
 [[lists]]
