--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,8 @@
     "cov": "deno task test --coverage && deno coverage --lcov > coverage.lcov"
   },
   "imports": {
+    "@5ouma/opml-generator/libs": "./src/libs/mod.ts",
+    "@5ouma/opml-generator/types": "./src/types/mod.ts",
     "@libs/xml": "jsr:@libs/xml@5.4.7",
     "@std/assert": "jsr:@std/assert@0.226.0",
     "@std/cli": "jsr:@std/cli@0.224.6",
