--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,30 +1,29 @@
 changelog:
   exclude:
     labels:
-      - "Type: Meta"
-      - "Type: Question"
-      - "Type: Release"
+      - "🧠 Meta"
+      - "🚀 Release"
 
   categories:
     - title: 🧨 Breaking Changes
-      labels: ["Type: Breaking Change"]
+      labels: ["🧨 Breaking Change"]
     - title: 🎉 New Features
-      labels: ["Type: Feature"]
+      labels: ["🎉 New Feature"]
     - title: 🧰 Bug Fixes
-      labels: ["Type: Bug"]
+      labels: ["🧰 Bug"]
     - title: 🛡️ Security Fixes
-      labels: ["Type: Security"]
+      labels: ["🛡️ Security"]
     - title: 📖 Documentation Changes
-      labels: ["Type: Documentation"]
+      labels: ["📖 Documentation"]
     - title: 🧹 Refactoring
-      labels: ["Type: Refactoring"]
+      labels: ["🧹 Refactoring"]
     - title: 🧪 Testing
-      labels: ["Type: Testing"]
+      labels: ["🧪 Testing"]
     - title: 🔧 Maintenance
-      labels: ["Type: Maintenance"]
+      labels: ["🔧 Maintenance"]
     - title: 🎽 CI
-      labels: ["Type: CI"]
+      labels: ["🎽 CI"]
     - title: ⛓️ Dependency Updates
-      labels: ["Type: Dependencies", "dependencies"]
+      labels: ["⛓️ Dependencies", "dependencies"]
     - title: 🔍 Other Changes
       labels: ["*"]
