--- a/.github/release.yml
+++ b/.github/release.yml
@@ -5,27 +5,27 @@ changelog:
       - "🚀 Release"
 
   categories:
-    - title: 🧨 Breaking Changes
+    - title: "🧨 Breaking Changes"
       labels: ["🧨 Breaking Change"]
-    - title: 🎉 New Features
+    - title: "🎉 New Features"
       labels: ["🎉 New Feature"]
-    - title: 🧰 Bug Fixes
+    - title: "🧰 Bug Fixes"
       labels: ["🧰 Bug"]
-    - title: 🛡️ Security Fixes
+    - title: "🛡️ Security Fixes"
       labels: ["🛡️ Security"]
-    - title: 📖 Documentation Changes
+    - title: "📖 Documentation Changes"
       labels: ["📖 Documentation"]
-    - title: 🏎️ Performance Improvements
+    - title: "🏎️ Performance Improvements"
       labels: ["🏎️ Performance"]
-    - title: 🧹 Refactoring
+    - title: "🧹 Refactoring"
       labels: ["🧹 Refactoring"]
-    - title: 🧪 Testing
+    - title: "🧪 Testing"
       labels: ["🧪 Testing"]
-    - title: 🔧 Maintenance
+    - title: "🔧 Maintenance"
       labels: ["🔧 Maintenance"]
-    - title: 🎽 CI
+    - title: "🎽 CI"
       labels: ["🎽 CI"]
-    - title: ⛓️ Dependency Updates
+    - title: "⛓️ Dependency Updates"
       labels: ["⛓️ Dependencies", "dependencies"]
-    - title: 🔍 Other Changes
+    - title: "🔍 Other Changes"
       labels: ["*"]
