--- a/deno.json
+++ b/deno.json
@@ -2,8 +2,8 @@
   "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
   "fmt": { "exclude": ["LICENSE", ".github/**/*.md"] },
   "tasks": {
-    "gen": "deno run --allow-env --allow-read --allow-write ./src/main.ts",
-    "test": "deno test --allow-env --allow-read --allow-write --parallel --shuffle",
+    "gen": "deno run --allow-env='NITTER_DOMAIN' --allow-read --allow-write ./src/main.ts",
+    "test": "deno test --allow-env='NITTER_DOMAIN' --allow-read --allow-write --parallel --shuffle",
     "cov": "deno task test --coverage && deno coverage --lcov > coverage.lcov"
   },
   "imports": {
