--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,9 @@ jobs:
       - name: 🧹 Lint Check
         run: deno lint
 
+      - name: 📚 Lint the JSDoc
+        run: deno doc --lint ./src
+
       - name: 📝 Format Check
         run: deno fmt --check
 
