--- a/deno.json
+++ b/deno.json
@@ -8,8 +8,8 @@
   },
   "fmt": { "exclude": ["LICENSE", "README.md", ".github/**/*.md"] },
   "tasks": {
-    "gen": "deno run --allow-env='NITTER_DOMAIN' --allow-read --allow-write src/main.ts",
-    "test": "deno test --allow-env='NITTER_DOMAIN' --allow-read --allow-write --parallel --shuffle",
+    "gen": "deno run -RWE='NITTER_DOMAIN' src/main.ts",
+    "test": "deno test -RWE='NITTER_DOMAIN' --parallel --shuffle",
     "cov": "deno task test --coverage && deno coverage --lcov > coverage.lcov"
   },
   "imports": {
