--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,7 @@
   "tasks": {
     "gen": "deno run -RWE='NITTER_DOMAIN' src/main.ts",
     "test": "deno test --doc -RWE='NITTER_DOMAIN' --parallel --shuffle",
-    "cov": "deno task test --coverage && deno coverage --lcov > coverage.lcov"
+    "test:ci": "deno task test --coverage --junit-path='junit.xml' && deno coverage --lcov > coverage.lcov"
   },
   "imports": {
     "@libs/xml": "jsr:@libs/xml@6.0.0",
