ci(pre-commit): Check all Renovate config with pre-commit.ci
All files will be checked on push.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,6 @@ ci:
     chore(fix): Auto fixes from pre-commit.com hooks
 
     For more information, see https://pre-commit.ci.
-  autoupdate_commit_msg: "chore(deps): Bump pre-commit hook"
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -36,11 +35,17 @@ repos:
     hooks:
       - id: actionlint
 
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 39.23.0
+    hooks:
+      - id: renovate-config-validator
+        files: (^|/).?(renovate(?:rc)?|default)(?:\.json5?)?$
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.42.0
     hooks:
       - id: markdownlint-fix
-        args: [--disable, "MD013", "MD023", "MD024", "MD033", "MD036"]
+        args: [--disable, MD013, MD023, MD024, MD033, MD036]
 
   - repo: https://github.com/koalaman/shellcheck-precommit
     rev: v0.10.0
