--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,16 @@ jobs:
   lint-check:
     name: 🧹 Lint Check
     runs-on: Ubuntu-Latest
+    timeout-minutes: 1
 
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
 
       - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@main
+        uses: 5ouma/utils/setup-deno-with-cache@3d7fe8d0af9597d68e95f581c032b77813c024af # v0.1.1
 
       - name: 🧹 Lint Check
         run: deno lint
@@ -38,13 +41,16 @@ jobs:
   format-check:
     name: 📝 Format Check
     runs-on: Ubuntu-Latest
+    timeout-minutes: 1
 
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
 
       - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@main
+        uses: 5ouma/utils/setup-deno-with-cache@3d7fe8d0af9597d68e95f581c032b77813c024af # v0.1.1
 
       - name: 📝 Format Check
         run: deno fmt --check
@@ -52,15 +58,17 @@ jobs:
   type-check:
     name: 🔍 Type Check
     runs-on: Ubuntu-Latest
+    timeout-minutes: 1
 
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: ${{ github.head_ref }}
+          persist-credentials: false
 
       - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@main
+        uses: 5ouma/utils/setup-deno-with-cache@3d7fe8d0af9597d68e95f581c032b77813c024af # v0.1.1
 
       - name: 🔍 Type Check
         run: deno check --doc ./src
@@ -68,15 +76,17 @@ jobs:
   test:
     name: 🧪 Test
     runs-on: Ubuntu-Latest
+    timeout-minutes: 1
 
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: ${{ github.head_ref }}
+          persist-credentials: false
 
       - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@main
+        uses: 5ouma/utils/setup-deno-with-cache@3d7fe8d0af9597d68e95f581c032b77813c024af # v0.1.1
 
       - name: 🧪 Run Tests
         run: deno task test:ci
@@ -95,13 +105,17 @@ jobs:
   dry-run-publish:
     name: 📦 Dry Run Publish
     runs-on: Ubuntu-Latest
+    timeout-minutes: 1
 
     steps:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ github.head_ref }}
+          persist-credentials: false
 
       - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@main
+        uses: 5ouma/utils/setup-deno-with-cache@3d7fe8d0af9597d68e95f581c032b77813c024af # v0.1.1
 
       - name: 📦 Dry Run Publish
         run: deno publish --dry-run
