--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,18 @@ jobs:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
+          ref: ${{ github.head_ref }}
           persist-credentials: false
 
-      - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@5d4d9189866ac7eb6c2d0534cf535f3f1f571cff # v0.1.4
+      - name: 🦕 Setup Deno
+        id: setup-deno
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+        with:
+          cache: true
+
+      - name: 📦 Install Dependencies
+        if: ${{ steps.setup-deno.outputs.cache-hit != 'true' }}
+        run: deno install --frozen
 
       - name: 🧹 Lint Check
         run: deno lint
@@ -49,8 +57,8 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@5d4d9189866ac7eb6c2d0534cf535f3f1f571cff # v0.1.4
+      - name: 🦕 Setup Deno
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
 
       - name: 📝 Format Check
         run: deno fmt --check
@@ -67,8 +75,15 @@ jobs:
           ref: ${{ github.head_ref }}
           persist-credentials: false
 
-      - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@5d4d9189866ac7eb6c2d0534cf535f3f1f571cff # v0.1.4
+      - name: 🦕 Setup Deno
+        id: setup-deno
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+        with:
+          cache: true
+
+      - name: 📦 Install Dependencies
+        if: ${{ steps.setup-deno.outputs.cache-hit != 'true' }}
+        run: deno install --frozen
 
       - name: 🔍 Type Check
         run: deno check --doc
@@ -85,8 +100,15 @@ jobs:
           ref: ${{ github.head_ref }}
           persist-credentials: false
 
-      - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@5d4d9189866ac7eb6c2d0534cf535f3f1f571cff # v0.1.4
+      - name: 🦕 Setup Deno
+        id: setup-deno
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+        with:
+          cache: true
+
+      - name: 📦 Install Dependencies
+        if: ${{ steps.setup-deno.outputs.cache-hit != 'true' }}
+        run: deno install --frozen
 
       - name: 🧪 Run Tests
         run: deno task test:cov
@@ -114,8 +136,8 @@ jobs:
           ref: ${{ github.head_ref }}
           persist-credentials: false
 
-      - name: 🦕 Setup Deno with Cache
-        uses: 5ouma/utils/setup-deno-with-cache@5d4d9189866ac7eb6c2d0534cf535f3f1f571cff # v0.1.4
+      - name: 🦕 Setup Deno
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
 
       - name: 📦 Dry Run Publish
         run: deno publish --dry-run
