--- a/.github/workflows/gist-update.yml
+++ b/.github/workflows/gist-update.yml
@@ -13,7 +13,9 @@ jobs:
 
     steps:
       - name: 🦕 Setup Deno
-        uses: denoland/setup-deno@909cc5acb0fdd60627fb858598759246509fa755 # v2.0.2
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
+        with:
+          cache: true
 
       - name: ⬇️ Download the TOML and OPML repository
         run: |
