ci(actions): Improve the style of workflow files
Correct the names and orders.

--- a/.github/workflows/gist-update.yml
+++ b/.github/workflows/gist-update.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           cache: true
 
-      - name: ⬇️ Download the TOML and OPML repository
+      - name: ⬇️ Download TOML and OPML repositories
         env:
           TOML_GIST_ID: ${{ secrets.TOML_GIST_ID }}
           OPML_GIST_ID: ${{ secrets.OPML_GIST_ID }}
@@ -25,10 +25,10 @@ jobs:
           git clone "https://gist.github.com/$TOML_GIST_ID.git" feeds
           git clone "https://gist.github.com/$OPML_GIST_ID.git" outputs
 
-      - name: 🧰 Generate OPML File
+      - name: 🧰 Generate OPML files
         run: deno run -A jsr:@5ouma/opml-generator --feeds=./feeds/feeds.toml --outputs=./outputs
 
-      - name: ⬆️ Upload OPML File
+      - name: ⬆️ Upload OPML files
         env:
           OPML_GIST_ID: ${{ secrets.OPML_GIST_ID }}
           GH_TOKEN: ${{ secrets.TOKEN }}
