--- a/.github/workflows/gist-update.yml
+++ b/.github/workflows/gist-update.yml
@@ -7,7 +7,8 @@ on:
 permissions: {}
 
 jobs:
-  Update:
+  update:
+    name: ⬆️ Update OPML in Gist
     runs-on: Ubuntu-Latest
     timeout-minutes: 1
 
