feat(action): Add composite action for reusability
Users can use this action without adding manually.

--- a/.github/tagpr.ini
+++ b/.github/tagpr.ini
@@ -1,6 +1,6 @@
 [tagpr]
   releaseBranch = main
-  versionFile = deno.json
+  versionFile = deno.json,README.md,action.yml
   vPrefix = true
   changelog = false
   templateText = Release: {{ .NextVersion }}\n{{ .Changelog }}
